<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ohms_bg"
                tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-9576690340592468/5519411235" />

            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/calculate"
                    android:text="@string/calculate"
                    android:textSize="@dimen/default_text"
                    android:textColor="#ffffff"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/adView"
                    android:gravity="center"
                    android:padding="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/volts_layout"
                          android:layout_below="@+id/calculate"
                          android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/volts_label"
                        android:text="@string/volts"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="@dimen/default_text"
                        android:gravity="center"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/volts_value"
                        android:background="#ffffff"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:text="0"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:textSize="@dimen/default_text"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/amps_layout"
                          android:layout_below="@+id/volts_layout"
                          android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/amps_label"
                        android:text="@string/amps"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="@dimen/default_text"
                        android:gravity="center"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/amps_value"
                        android:background="#ffffff"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:text="0"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:textSize="@dimen/default_text"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/ohms_layout"
                          android:layout_below="@+id/amps_layout"
                          android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ohms_label"
                        android:text="@string/ohms"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="@dimen/default_text"
                        android:gravity="center"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ohms_value"
                        android:background="#ffffff"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:text="0"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:textSize="@dimen/default_text"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/watts_layout"
                          android:layout_below="@+id/ohms_layout"
                          android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/watts_label"
                        android:text="@string/watts"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:textSize="@dimen/default_text"
                        android:gravity="center"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/watts_value"
                        android:background="#ffffff"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:text="0"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:textSize="@dimen/default_text"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/help_reset"
                    android:layout_below="@+id/watts_layout"
                    android:gravity="center">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/help"
                        android:text="@string/help"
                        android:textSize="@dimen/default_text"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginStart="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/reset"
                        android:text="@string/reset"
                        android:textSize="@dimen/default_text"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginStart="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/more_share"
                android:layout_below="@+id/help_reset"
                android:orientation="horizontal">

                <Button
                    android:text="@string/developer_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/developer"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:textSize="@dimen/default_text"
                    android:textColor="#ffffff" />

                <Button
                    android:text="@string/share_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/share"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:textSize="@dimen/default_text"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/about"
                android:text="@string/about"
                android:textColor="#ffffff"
                android:textSize="@dimen/default_text"
                android:layout_below="@+id/more_share"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
